Добавлена регистрация, обновлена база данных

--- a/StoreSystem/Views/Account/Login.cshtml
+++ b/StoreSystem/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@model User
 
 <h2>Вход</h2>
+<p>Нет учётной записи? <a asp-action="Register">Зарегистрируйтесь здесь</a>.</p>
 <form asp-action="Login" method="post">
     <div>
         <label>Логин</label>
