--- a/StoreSystem/Views/Shared/_Layout.cshtml
+++ b/StoreSystem/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
                         
                     </ul>
                 </div>
