--- a/StoreSystem/Views/Account/Register.cshtml
+++ b/StoreSystem/Views/Account/Register.cshtml
@@ -10,8 +10,8 @@
         <input type="password" name="password" class="form-control" required />
     </div>
     <div class="form-group">
-        <label>Роль</label>
-        @Html.DropDownList("postId", (SelectList)ViewData["PostId"], "Выберите роль", new { @class = "form-control" })
+        <label>Сотрудник</label>
+        <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
     </div>
     <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 </form>
