--- a/StoreSystem/Views/Home/Index.cshtml
+++ b/StoreSystem/Views/Home/Index.cshtml
@@ -9,29 +9,36 @@
     </div>
 }
 
-
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Products" asp-action="Index" class="btn btn-primary btn-lg btn-block">Manage Products</a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary btn-lg btn-block">Manage Categories</a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Orders" asp-action="Index" class="btn btn-success btn-lg btn-block">View Orders</a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Customers" asp-action="Index" class="btn btn-info btn-lg btn-block">Customer Management</a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Suppliers" asp-action="Index" class="btn btn-warning btn-lg btn-block">Manage Suppliers</a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a asp-controller="Reports" asp-action="Index" class="btn btn-dark btn-lg btn-block">Generate Reports</a>
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Products" asp-action="Index" class="btn btn-primary btn-lg btn-block">Manage Products</a>
+            </div>
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary btn-lg btn-block">Manage Categories</a>
+            </div>
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Orders" asp-action="Index" class="btn btn-success btn-lg btn-block">View Orders</a>
+            </div>
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Customers" asp-action="Index" class="btn btn-info btn-lg btn-block">Customer Management</a>
+            </div>
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Suppliers" asp-action="Index" class="btn btn-warning btn-lg btn-block">Manage Suppliers</a>
+            </div>
+            <div class="col-md-6 mb-3">
+                <a asp-controller="Reports" asp-action="Index" class="btn btn-dark btn-lg btn-block">Generate Reports</a>
+            </div>
+            <div class="col-md-12 mb-3">
+                <a asp-controller="Sale" asp-action="Sale" class="btn btn-success btn-lg btn-block">Sale</a>
+            </div>
         </div>
     </div>
-</div>
+    
+}
+
 
 <style>
     .btn {
