--- a/StoreSystem/Views/Reports/Index.cshtml
+++ b/StoreSystem/Views/Reports/Index.cshtml
@@ -7,5 +7,5 @@
 <div class="d-grid gap-2 col-6">
     <a asp-action="EmployeeReport" class="btn btn-primary">Отчёт по сотрудникам</a>
     <a asp-action="SalesReport" class="btn btn-success">Отчёт по продажам</a>
-    <a asp-action="TopSellingProducts" class="btn btn-success">Отчёт по самым продаваемым товарам</a>
+    <a asp-action="ProductSalesReport" class="btn btn-success">Отчёт по товарам</a>
 </div>
