--- a/StoreSystem/Views/Employees/Index.cshtml
+++ b/StoreSystem/Views/Employees/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Salary)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bonus)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -48,6 +51,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Salary)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Bonus)
+                </td>
+
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
