Множественные исправления ошибок. Теперь у каждого сотрудника есть профиль, с краткой информацией о нем и его историей продаж. Следующим шагом будет добавление нового функционала на эту страницу.

--- a/StoreSystem/Views/Reports/ProductSalesReport.cshtml
+++ b/StoreSystem/Views/Reports/ProductSalesReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StoreSystem.Models.ProductSalesReportViewModel>
+﻿@model IEnumerable<ProductSalesReportViewModel>
 
 @{
     ViewData["Title"] = "Product Sales Report";
