--- a/StoreSystem/Views/Reports/SalesReport.cshtml
+++ b/StoreSystem/Views/Reports/SalesReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StoreSystem.Models.SalesReportViewModel>
+﻿@model IEnumerable<SalesReportViewModel>
 
 @{
     ViewData["Title"] = "Отчёт по продажам";
