--- a/StoreSystem/wwwroot/css/site.css
+++ b/StoreSystem/wwwroot/css/site.css
@@ -20,7 +20,7 @@ html {
 body {
   margin-bottom: 60px;
 }
-/* Карточка товара */
+
 .product-card {
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -40,7 +40,7 @@ body {
         margin-top: 10px;
     }
 
-/* Элемент корзины */
+
 .cart-item {
     display: flex;
     justify-content: space-between;
@@ -62,10 +62,59 @@ body {
         color: #007bff;
     }
 
-    /* Кнопки + и - */
     .cart-item .btn {
         width: 30px;
         height: 30px;
         padding: 0;
         text-align: center;
+    }
+.profile-img {
+    width: 220px;
+    height: 220px;
+    border: 5px solid #6c757d;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    object-fit: cover;
+}
+
+
+.profile-details {
+    text-align: left;
+}
+
+    .profile-details h2 {
+        font-size: 2rem;
+        font-weight: bold;
+        color: #343a40;
+    }
+
+    .profile-details p {
+        font-size: 1.2rem;
+        margin-bottom: 8px;
+    }
+
+
+
+
+
+h3 a {
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: #007bff;
+    transition: color 0.3s ease;
+}
+
+    h3 a:hover {
+        color: #0056b3;
+        text-decoration: underline;
+    }
+.step {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    position: absolute;
+    width: 100%;
+}
+
+    .step.active {
+        opacity: 1;
+        position: relative;
     }
