--- a/StoreSystem/Views/Home/Index.cshtml
+++ b/StoreSystem/Views/Home/Index.cshtml
@@ -34,6 +34,9 @@
             <div class="col-md-12 mb-3">
                 <a asp-controller="Sale" asp-action="Sale" class="btn btn-success btn-lg btn-block">Sale</a>
             </div>
+            <div class="col-md-12 mb-3">
+                <a asp-controller="WorkSchedule" asp-action="Index" class="btn btn-success btn-lg btn-block">Work Schedule</a>
+            </div>
         </div>
     </div>
     
