--- a/StoreSystem/Views/Shared/AccessDenied.cshtml
+++ b/StoreSystem/Views/Shared/AccessDenied.cshtml
@@ -3,6 +3,6 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Потрачено.</h1>
-<h2 class="text-danger">Доступ запрещен.</h2>
+<h1 class="text-danger">Ошибка уровня доступа.</h1>
+
 
